2008-03-20  David Bateman  <dbateman@free.fr>

	* general/tril.m, general/triu.m: Fail if input is a structure.

	* miscellaneous/cast.m: Also allow cast to "char".

	* general/rotdim.m: Ensure k is an integer scale.

	* general/circshift.m: If matrix is empty fast return.

2008-03-20  Jaroslav Hajek  <highegg@localhost.localdomain>

	* linear-algebra/subspace.m: Check number of arguments, number
	of dimensions of arguments and matching dimensions.

2008-03-19  Jaroslav Hajek  <highegg@gmail.com>

	* linear-algebra/subspace.m: New function.

2008-03-19  Emil Lucretiu  <emil@la.mine.nu>

	* signal/sinetone.m: Ensure integral number of samples.

2008-03-19  Michael D. Godfrey  <godfrey@isl.stanford.edu>

	* plot/__go_draw_axes__.m: Additional correction for symbol codes.

2008-03-19  Ben Abbott  <bpabbott@mac.com>
	
	* statistics/base/mode.m: Add NDArray tests.

2008-03-19  Jaroslav Hajek <highegg@gmail.com>

	* statistics/distributions/exppdf.m,
	statistics/distributions/expcdf.m,
	statistics/distributions/expinv.m,
	statistics/distributions/exprnd.m: Doc fix.

2008-03-19  David Bateman  <dbateman@free.fr>

	* statistics/base/mode.m: Fix for row vectors.

	* plot/__scatter__.m: Modify for change of markersize in
	__go_draw_axes__.m and for compatibility.
	* plot/__go_draw_axes__.m: Don't divide the marker size by 6
	twice.
	* plot/scatter3.m: Doc fix.

2008-03-18  Ben Abbott <bpabbott@mac.com>

	* specfun/beta.m: Fix for negative inputs.

2008-03-18  Michael D. Godfrey  <godfrey@isl.stanford.edu>

	* plot/__go_draw_axes__.m: Use correct symbol codes.

2008-03-17  Jaroslav Hajek <highegg@gmail.com>

	* linear-algebra/subspace.m: New function.

2008-03-14  Kai Habel  <kai.habel@gmx.de>

        * plot/__go_draw_axes__.m: Expicitly set gnuplot user
        style to default to avoid wrong mesh color in some cases.

2008-03-12  David Bateman  <dbateman@free.fr>

	* geometry/griddata3.m: Use griddatan and not griddata
	internally. Return vi and not yi. Add test code.
